[gd_scene load_steps=33 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Sprites/tile.png" type="Texture" id=2]
[ext_resource path="res://Item.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/track2.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/explosion.wav" type="AudioStream" id=5]
[ext_resource path="res://Fonts/FiraSans-Ultra.otf" type="DynamicFontData" id=6]
[ext_resource path="res://GameTimer.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Buttons/close.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Lobby/bg.png" type="Texture" id=9]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 116, 0, 116, 116, 0, 116 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 0, 120, 0, 120, 120, 0, 120 )

[sub_resource type="TileSet" id=21]
3/name = "tile.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 120, 120 )
3/tile_mode = 1
3/autotile/bitmask_mode = 0
3/autotile/bitmask_flags = [  ]
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 120, 120 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "sol"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 120, 120 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "sol2"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 120, 120, 120 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [  ]
5/z_index = 0
6/name = "sol3"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 240, 120, 120 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 0
7/name = "bg3"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 360, 120, 120 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "bghautg"
8/texture = ExtResource( 2 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 480, 120, 120 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "bgl"
9/texture = ExtResource( 2 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 600, 120, 120 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "bgBasGauche"
10/texture = ExtResource( 2 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 720, 120, 120 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "bghautm"
11/texture = ExtResource( 2 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 120, 480, 120, 120 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0
12/name = "bgm"
12/texture = ExtResource( 2 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 120, 600, 120, 120 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
12/z_index = 0
13/name = "bgBas"
13/texture = ExtResource( 2 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 120, 720, 120, 120 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
13/z_index = 0
14/name = "bghautd"
14/texture = ExtResource( 2 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 240, 480, 120, 120 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
14/z_index = 0
15/name = "bgd"
15/texture = ExtResource( 2 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 240, 600, 120, 120 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
15/z_index = 0
16/name = "bgBasDroite"
16/texture = ExtResource( 2 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 240, 720, 120, 120 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
16/z_index = 0
17/name = "bg13"
17/texture = ExtResource( 2 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 120, 360, 120, 120 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
17/z_index = 0
18/name = "bg14"
18/texture = ExtResource( 2 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 240, 360, 120, 120 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
18/z_index = 0
19/name = "bg15"
19/texture = ExtResource( 2 )
19/tex_offset = Vector2( 0, 0 )
19/modulate = Color( 1, 1, 1, 1 )
19/region = Rect2( 360, 360, 120, 120 )
19/tile_mode = 0
19/occluder_offset = Vector2( 0, 0 )
19/navigation_offset = Vector2( 0, 0 )
19/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
19/z_index = 0
20/name = "bg16"
20/texture = ExtResource( 2 )
20/tex_offset = Vector2( 0, 0 )
20/modulate = Color( 1, 1, 1, 1 )
20/region = Rect2( 120, 0, 120, 120 )
20/tile_mode = 0
20/occluder_offset = Vector2( 0, 0 )
20/navigation_offset = Vector2( 0, 0 )
20/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
20/z_index = 0
21/name = "bg17"
21/texture = ExtResource( 2 )
21/tex_offset = Vector2( 0, 0 )
21/modulate = Color( 1, 1, 1, 1 )
21/region = Rect2( 240, 0, 120, 120 )
21/tile_mode = 0
21/occluder_offset = Vector2( 0, 0 )
21/navigation_offset = Vector2( 0, 0 )
21/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
21/z_index = 0
22/name = "bg18"
22/texture = ExtResource( 2 )
22/tex_offset = Vector2( 0, 0 )
22/modulate = Color( 1, 1, 1, 1 )
22/region = Rect2( 360, 0, 120, 120 )
22/tile_mode = 0
22/occluder_offset = Vector2( 0, 0 )
22/navigation_offset = Vector2( 0, 0 )
22/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
22/z_index = 0
23/name = "bg19"
23/texture = ExtResource( 2 )
23/tex_offset = Vector2( 0, 0 )
23/modulate = Color( 1, 1, 1, 1 )
23/region = Rect2( 240, 120, 120, 120 )
23/tile_mode = 0
23/occluder_offset = Vector2( 0, 0 )
23/navigation_offset = Vector2( 0, 0 )
23/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
23/z_index = 0
24/name = "b1"
24/texture = ExtResource( 2 )
24/tex_offset = Vector2( 0, 0 )
24/modulate = Color( 1, 1, 1, 1 )
24/region = Rect2( 120, 120, 120, 120 )
24/tile_mode = 0
24/occluder_offset = Vector2( 0, 0 )
24/navigation_offset = Vector2( 0, 0 )
24/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
24/z_index = 0
25/name = "b2"
25/texture = ExtResource( 2 )
25/tex_offset = Vector2( 0, 0 )
25/modulate = Color( 1, 1, 1, 1 )
25/region = Rect2( 120, 240, 120, 120 )
25/tile_mode = 0
25/occluder_offset = Vector2( 0, 0 )
25/navigation_offset = Vector2( 0, 0 )
25/shapes = [  ]
25/z_index = 0
26/name = "b3"
26/texture = ExtResource( 2 )
26/tex_offset = Vector2( 0, 0 )
26/modulate = Color( 1, 1, 1, 1 )
26/region = Rect2( 240, 240, 120, 120 )
26/tile_mode = 0
26/occluder_offset = Vector2( 0, 0 )
26/navigation_offset = Vector2( 0, 0 )
26/shapes = [  ]
26/z_index = 0
27/name = "bg18"
27/texture = ExtResource( 2 )
27/tex_offset = Vector2( 0, 0 )
27/modulate = Color( 1, 1, 1, 1 )
27/region = Rect2( 360, 480, 120, 120 )
27/tile_mode = 0
27/occluder_offset = Vector2( 0, 0 )
27/navigation_offset = Vector2( 0, 0 )
27/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
27/z_index = 0
28/name = "tile.png 28"
28/texture = ExtResource( 2 )
28/tex_offset = Vector2( 0, 0 )
28/modulate = Color( 1, 1, 1, 1 )
28/region = Rect2( 373, 151, 116, 116 )
28/tile_mode = 0
28/occluder_offset = Vector2( 0, 0 )
28/navigation_offset = Vector2( 0, 0 )
28/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
28/z_index = 0

[sub_resource type="DynamicFont" id=22]
size = 60
outline_color = Color( 0.243137, 0.243137, 0.243137, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=23]
size = 200
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Map" type="TileMap" parent="."]
tile_set = SubResource( 21 )
cell_size = Vector2( 120, 120 )
format = 1
tile_data = PoolIntArray( -196588, 28, 0, -196586, 28, 0, -65542, 28, 0, -65541, 28, 0, -65540, 28, 0, -65539, 28, 0, -65538, 28, 0, -65537, 28, 0, -131072, 28, 0, -131071, 28, 0, -131070, 28, 0, -131069, 28, 0, -131068, 28, 0, -131067, 28, 0, -131066, 28, 0, -131065, 28, 0, -131064, 28, 0, -131063, 28, 0, -131062, 28, 0, -131061, 28, 0, -131060, 28, 0, -131059, 28, 0, -131058, 28, 0, -131057, 28, 0, -131056, 28, 0, -131055, 28, 0, -131054, 28, 0, -131053, 28, 0, -131052, 28, 0, -131051, 28, 0, -131050, 28, 0, -6, 28, 0, -5, 28, 0, -4, 28, 0, -3, 28, 0, -2, 28, 0, -1, 28, 0, -65536, 28, 0, -65535, 28, 0, -65534, 28, 0, -65533, 28, 0, -65532, 28, 0, -65531, 28, 0, -65530, 28, 0, -65529, 28, 0, -65528, 28, 0, -65527, 28, 0, -65526, 28, 0, -65525, 28, 0, -65524, 28, 0, -65523, 28, 0, -65522, 28, 0, -65521, 28, 0, -65520, 28, 0, -65519, 28, 0, -65518, 28, 0, -65517, 28, 0, -65516, 28, 0, -65515, 28, 0, -65514, 28, 0, 65530, 28, 0, 65531, 28, 0, 65532, 28, 0, 65533, 28, 0, 65534, 28, 0, 65535, 28, 0, 0, 28, 0, 1, 28, 0, 2, 28, 0, 3, 28, 0, 4, 28, 0, 5, 28, 0, 6, 28, 0, 7, 28, 0, 8, 28, 0, 9, 28, 0, 10, 28, 0, 11, 28, 0, 12, 28, 0, 13, 28, 0, 14, 28, 0, 15, 28, 0, 16, 28, 0, 17, 28, 0, 18, 28, 0, 19, 28, 0, 20, 28, 0, 21, 28, 0, 22, 28, 0, 131066, 28, 0, 131067, 28, 0, 131068, 28, 0, 131069, 28, 0, 131070, 28, 0, 131071, 28, 0, 65536, 28, 0, 65537, 28, 0, 65538, 28, 0, 65539, 28, 0, 65540, 28, 0, 65541, 28, 0, 65542, 28, 0, 65543, 28, 0, 65544, 28, 0, 65545, 28, 0, 65546, 28, 0, 65547, 28, 0, 65548, 28, 0, 65549, 28, 0, 65550, 28, 0, 65551, 28, 0, 65552, 28, 0, 65553, 28, 0, 65554, 28, 0, 65555, 28, 0, 65556, 28, 0, 65557, 28, 0, 65558, 28, 0, 196602, 28, 0, 196603, 28, 0, 196604, 28, 0, 196605, 28, 0, 196606, 28, 0, 196607, 28, 0, 131072, 28, 0, 131073, 28, 0, 131074, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 4, 0, 131081, 4, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 0, 131085, 4, 0, 131086, 4, 0, 131087, 28, 0, 131088, 28, 0, 131089, 28, 0, 131090, 28, 0, 131091, 28, 0, 131092, 28, 0, 131093, 28, 0, 131094, 28, 0, 262138, 28, 0, 262139, 28, 0, 262140, 28, 0, 262141, 28, 0, 262142, 28, 0, 262143, 28, 0, 196608, 28, 0, 196609, 28, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196619, 4, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 28, 0, 196624, 28, 0, 196625, 28, 0, 196626, 28, 0, 196627, 28, 0, 196628, 28, 0, 196629, 28, 0, 196630, 28, 0, 327674, 28, 0, 327675, 28, 0, 327676, 28, 0, 327677, 28, 0, 327678, 28, 0, 327679, 28, 0, 262144, 28, 0, 262145, 28, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 0, 262156, 4, 0, 262157, 4, 0, 262158, 4, 0, 262159, 28, 0, 262160, 28, 0, 262161, 28, 0, 262162, 28, 0, 262163, 28, 0, 262164, 28, 0, 262165, 28, 0, 262166, 28, 0, 393210, 28, 0, 393211, 28, 0, 393212, 28, 0, 393213, 28, 0, 393214, 28, 0, 393215, 28, 0, 327680, 28, 0, 327681, 28, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 327690, 4, 0, 327691, 4, 0, 327692, 4, 0, 327693, 4, 0, 327694, 4, 0, 327695, 28, 0, 327696, 28, 0, 327697, 28, 0, 327698, 28, 0, 327699, 28, 0, 327700, 28, 0, 327701, 28, 0, 327702, 28, 0, 458746, 28, 0, 458747, 28, 0, 458748, 28, 0, 458749, 28, 0, 458750, 28, 0, 458751, 28, 0, 393216, 28, 0, 393217, 28, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393227, 4, 0, 393228, 4, 0, 393229, 4, 0, 393230, 4, 0, 393231, 28, 0, 393232, 28, 0, 393233, 28, 0, 393234, 28, 0, 393235, 28, 0, 393236, 28, 0, 393237, 28, 0, 393238, 28, 0, 524282, 28, 0, 524283, 28, 0, 524284, 28, 0, 524285, 28, 0, 524286, 28, 0, 524287, 28, 0, 458752, 28, 0, 458753, 28, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 4, 0, 458760, 4, 0, 458761, 4, 0, 458762, 4, 0, 458763, 4, 0, 458764, 4, 0, 458765, 4, 0, 458766, 4, 0, 458767, 28, 0, 458768, 28, 0, 458769, 28, 0, 458770, 28, 0, 458771, 28, 0, 458772, 28, 0, 458773, 28, 0, 458774, 28, 0, 589818, 28, 0, 589819, 28, 0, 589820, 28, 0, 589821, 28, 0, 589822, 28, 0, 589823, 28, 0, 524288, 28, 0, 524289, 28, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524295, 4, 0, 524296, 4, 0, 524297, 4, 0, 524298, 4, 0, 524299, 4, 0, 524300, 4, 0, 524301, 4, 0, 524302, 4, 0, 524303, 28, 0, 524304, 28, 0, 524305, 28, 0, 524306, 28, 0, 524307, 28, 0, 524308, 28, 0, 524309, 28, 0, 524310, 28, 0, 655354, 28, 0, 655355, 28, 0, 655356, 28, 0, 655357, 28, 0, 655358, 28, 0, 655359, 28, 0, 589824, 28, 0, 589825, 28, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589832, 4, 0, 589833, 4, 0, 589834, 4, 0, 589835, 4, 0, 589836, 4, 0, 589837, 4, 0, 589838, 4, 0, 589839, 28, 0, 589840, 28, 0, 589841, 28, 0, 589842, 28, 0, 589843, 28, 0, 589844, 28, 0, 589845, 28, 0, 589846, 28, 0, 720890, 28, 0, 720891, 28, 0, 720892, 28, 0, 720893, 28, 0, 720894, 28, 0, 720895, 28, 0, 655360, 28, 0, 655361, 28, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655368, 4, 0, 655369, 4, 0, 655370, 4, 0, 655371, 4, 0, 655372, 4, 0, 655373, 4, 0, 655374, 4, 0, 655375, 28, 0, 655376, 28, 0, 655377, 28, 0, 655378, 28, 0, 655379, 28, 0, 655380, 28, 0, 655381, 28, 0, 655382, 28, 0, 786426, 28, 0, 786427, 28, 0, 786428, 28, 0, 786429, 28, 0, 786430, 28, 0, 786431, 28, 0, 720896, 28, 0, 720897, 28, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 4, 0, 720902, 4, 0, 720903, 4, 0, 720904, 4, 0, 720905, 4, 0, 720906, 4, 0, 720907, 4, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 28, 0, 720912, 28, 0, 720913, 28, 0, 720914, 28, 0, 720915, 28, 0, 720916, 28, 0, 720917, 28, 0, 720918, 28, 0, 851962, 28, 0, 851963, 28, 0, 851964, 28, 0, 851965, 28, 0, 851966, 28, 0, 851967, 28, 0, 786432, 28, 0, 786433, 28, 0, 786434, 4, 0, 786435, 4, 0, 786436, 4, 0, 786437, 4, 0, 786438, 4, 0, 786439, 4, 0, 786440, 4, 0, 786441, 4, 0, 786442, 4, 0, 786443, 4, 0, 786444, 4, 0, 786445, 4, 0, 786446, 4, 0, 786447, 28, 0, 786448, 28, 0, 786449, 28, 0, 786450, 28, 0, 786451, 28, 0, 786452, 28, 0, 786453, 28, 0, 786454, 28, 0, 917498, 28, 0, 917499, 28, 0, 917500, 28, 0, 917501, 28, 0, 917502, 28, 0, 917503, 28, 0, 851968, 28, 0, 851969, 28, 0, 851970, 18, 0, 851971, 17, 0, 851972, 18, 0, 851973, 7, 0, 851974, 17, 0, 851975, 18, 0, 851976, 7, 0, 851977, 17, 0, 851978, 18, 0, 851979, 7, 0, 851980, 19, 0, 851981, 17, 0, 851982, 17, 0, 851983, 28, 0, 851984, 28, 0, 851985, 28, 0, 851986, 28, 0, 851987, 28, 0, 851988, 28, 0, 851989, 28, 0, 851990, 28, 0, 983034, 28, 0, 983035, 28, 0, 983036, 28, 0, 983037, 28, 0, 983038, 28, 0, 983039, 28, 0, 917504, 28, 0, 917505, 28, 0, 917506, 28, 0, 917507, 28, 0, 917508, 28, 0, 917509, 28, 0, 917510, 28, 0, 917511, 28, 0, 917512, 28, 0, 917513, 28, 0, 917514, 28, 0, 917515, 28, 0, 917516, 28, 0, 917517, 28, 0, 917518, 28, 0, 917519, 28, 0, 917520, 28, 0, 917521, 28, 0, 917522, 28, 0, 917523, 28, 0, 917524, 28, 0, 917525, 28, 0, 917526, 28, 0, 1048570, 28, 0, 1048571, 28, 0, 1048572, 28, 0, 1048573, 28, 0, 1048574, 28, 0, 1048575, 28, 0, 983040, 28, 0, 983041, 28, 0, 983042, 28, 0, 983043, 28, 0, 983044, 28, 0, 983045, 28, 0, 983046, 28, 0, 983047, 28, 0, 983048, 28, 0, 983049, 28, 0, 983050, 28, 0, 983051, 28, 0, 983052, 28, 0, 983053, 28, 0, 983054, 28, 0, 983055, 28, 0, 983056, 28, 0, 983057, 28, 0, 983058, 28, 0, 983059, 28, 0, 983060, 28, 0, 983061, 28, 0, 983062, 28, 0, 1114106, 28, 0, 1114107, 28, 0, 1114108, 28, 0, 1114109, 28, 0, 1114110, 28, 0, 1114111, 28, 0, 1048576, 28, 0, 1048577, 28, 0, 1048578, 28, 0, 1048579, 28, 0, 1048580, 28, 0, 1048581, 28, 0, 1048582, 28, 0, 1048583, 28, 0, 1048584, 28, 0, 1048585, 28, 0, 1048586, 28, 0, 1048587, 28, 0, 1048588, 28, 0, 1048589, 28, 0, 1048590, 28, 0, 1048591, 28, 0, 1048592, 28, 0, 1048593, 28, 0, 1048594, 28, 0, 1048595, 28, 0, 1048596, 28, 0, 1048597, 28, 0, 1048598, 28, 0, 1114128, 28, 0, 1114129, 28, 0, 1114130, 28, 0, 1114131, 28, 0, 1114132, 28, 0, 1114133, 28, 0, 1114134, 28, 0, 1179669, 28, 0, 1179670, 28, 0 )

[node name="Item" parent="." instance=ExtResource( 3 )]
position = Vector2( 600.586, -1587.03 )
collision_layer = 15

[node name="GameTrack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="BombTrack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
area_mask = 2

[node name="GameTimer" type="Label" parent="."]
margin_left = 990.579
margin_top = 23.4433
margin_right = 1234.58
margin_bottom = 115.443
custom_fonts/font = SubResource( 22 )
custom_colors/font_color = Color( 0.364706, 0.364706, 0.364706, 1 )
text = "00:00"
script = ExtResource( 7 )

[node name="ms" type="Timer" parent="GameTimer"]
autostart = true

[node name="PreviewLabel" type="Label" parent="."]
margin_left = 237.354
margin_top = 1694.57
margin_right = 481.354
margin_bottom = 1786.57
custom_fonts/font = SubResource( 22 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "PREVIEW"

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 1000, 900 )
current = true
zoom = Vector2( 3.1, 3.1 )

[node name="NodeWinningLabel" type="Node2D" parent="."]
z_index = 10

[node name="WinningLabel" type="Label" parent="NodeWinningLabel"]
margin_left = 380.0
margin_top = 900.0
margin_right = 1605.0
margin_bottom = 1383.0
rect_rotation = -23.48
custom_fonts/font = SubResource( 23 )
custom_colors/font_color = Color( 0.364706, 0.364706, 0.364706, 1 )
custom_constants/line_spacing = -28
text = "Game Over
Player 1 Wins"
align = 1

[node name="LeaveButton" type="TextureButton" parent="NodeWinningLabel"]
margin_left = 1679.7
margin_top = 248.684
margin_right = 1979.7
margin_bottom = 548.684
rect_scale = Vector2( 0.33, 0.33 )
texture_normal = ExtResource( 8 )

[node name="ObjectSort" type="YSort" parent="."]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1004.22, 971.923 )
z_index = -1
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 0, 0, 3200, 2000 )
[connection signal="timeout" from="GameTimer/ms" to="GameTimer" method="_on_ms_timeout"]
[connection signal="pressed" from="NodeWinningLabel/LeaveButton" to="." method="_on_LeaveButton_pressed"]
